--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ jdk:
   - openjdk6
 #  - openjdk7
 before_script:
-  - mysql -e "drop database if exists dmdb2013; create user dmdb@localhost identified by \'1234\'; create database dmdb2013; grant all on dmdb2013.* to dmdb@localhost;"
+  - mysql -e "drop database if exists dmdb2013; create user dmdb@localhost identified by '1234'; create database dmdb2013; grant all on dmdb2013.* to dmdb@localhost;"
+  
