--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
   - openjdk6
-#  - openjdk7
+  - openjdk7
 before_script:
   - mysql -u root -e "drop database if exists dmdb2013;"
   - mysql -u root -e "create user dmdb@localhost identified by '1234';"
